...
                if !isLastIndex {
                    Button {
                        print("About tapped!")
                        self.selectedIndexPath += 1
                    } label: {
                        HStack {
                            Text("Next Lesson")
                                .font(Font.system(size: 20, weight: .bold, design: .rounded))
                                .foregroundColor(.blue)
                            Image(systemName: "chevron.right")
                                .font(Font.system(size: 20, weight: .bold, design: .rounded))
                                .foregroundColor(.blue)
                                .padding(.trailing, 30)
...
                    }
                    Text((lessonsViewModel.lessons[selectedIndexPath].isVideoDownloading ?? false) ? "Cancel" : "Download")
                        .font(.headline)
                        .foregroundColor(.blue)
                }
            }
        }.accessibilityIdentifier("Download Button"))
        .alert("Please Connected to the internet", isPresented: $showAlertSheet, actions: {
            Button("OK", role: .cancel) {
                showAlertSheet = false
            }
        })
        .task {
...
